- remove flyway and sql restriction